# sterces

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
attic/sterces/: app.py
docs/_templates/: badges.html  github.html  moreinfo.html
docs/pages/: code.rst
sterces/: __init__.py  app.py  cli.py  constants.py  db.py  foos.py  options.py
sterces/entries/: commands.py
sterces/groups/: commands.py
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_entry_commands.py  test_group_command.py  test_store_command.py
